--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,8 +8,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
-  circular_menu: ^1.1.2
+  cupertino_icons: ^1.0.3
+  circular_menu:
+    path: ../
   
 
 # The following section is specific to Flutter.
