--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,60 @@
-.*
-
-
-!.gitignore
-
-
 # Miscellaneous
 *.class
 *.log
 *.pyc
 *.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
 
 # IntelliJ related
 *.iml
 *.ipr
 *.iws
+.idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
+# Visual Studio Code related
+.vscode/
 
 # Flutter/Dart/Pub related
 **/doc/api/
-build/
+.dart_tool/
+.flutter-plugins
+**/.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+**/*.g.dart
+/build/
+
+.release-notes
+
+.gradle/
+gradle*
+*.cer
+
+# Swagger
+.swagger-codegen-ignore
+.swagger-codegen/
+swagger-cli.jar
+**/docs
 
 # Android related
-**/android/**/gradle-wrapper.jar
 **/android/.gradle
 **/android/captures/
-**/android/gradlew
-**/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+**/android/**/key.jks
+**/android/**/google-services.json
+**/android/.gradletasknamecache
+**/android/release-manager-key.json
+
+# Fastlane
+fastlane/metadata/android/en-US/*.txt
+fastlane/report.xml
+fastlane/README.md
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
@@ -48,18 +71,30 @@ build/
 **/ios/**/Pods/
 **/ios/**/.symlinks/
 **/ios/**/profile
+**/ios/**/Flutter.podspec
 **/ios/**/xcuserdata
+**/ios/*.cer
+**/ios/Flutter/flutter_export_environment.sh
+**/ios/fastlane/report.xml
+*.mobileprovision
 **/ios/.generated/
 **/ios/Flutter/App.framework
 **/ios/Flutter/Flutter.framework
-**/ios/Flutter/Flutter.podspec
 **/ios/Flutter/Generated.xcconfig
 **/ios/Flutter/app.flx
 **/ios/Flutter/app.zip
 **/ios/Flutter/flutter_assets/
-**/ios/Flutter/flutter_export_environment.sh
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
+**/ios/Runner.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+
+coverage/
+lib/generated/
+res/
+example/build
+
+.direnv
+.aliases.sh
 
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
